2005-03-08  Don Allingham  <don@gramps-project.org>
	* src/ChooseParents.py: change _nsort to _model
	* src/GrampsBSDDB.py: fix event secondary index function to that
	the event name is used instead of the GRAMPS id.

2005-03-08 Alex Roitman  <shura@alex.neuro.umn.edu>
	* src/EditPerson.py: Remove numerous multiple definitions.
	* src/AttrEdit.py (__init__): Set text to translated attribute type.
	* src/const.py.in (display_attr): Add function.

	* src/DbPrompter.py (ImportDbPrompter.chooser): Typo.

	* src/Marriage.py (on_add_clicked,on_event_update_clicked): Typos.
	* src/AddSpouse.py (select_spouse_clicked): Typo.

	* src/EditPerson.py (__init__): Only set update sources if possible
	(calls from ChooseParents don't provide the correct parent, but then
	the full update goes on anyway).
	* src/ChooseParents.py (mother_list_select_row,
	father_list_select_row): Comment out auto-selection of parents.

	* src/plugins/FilterEditor.py (on_delete_event,close_filter_editor):
	Update filter ComboBox in the main window.
	* src/gramps_main.py (init_filters): Clear layout before rebuilding.

	* src/ChooseParents.py: Stop parent selection window from being
	modal; fix child/parent relations from strings to integers.

2005-03-07 Alex Roitman  <shura@alex.neuro.umn.edu>
	* src/AddrEdit.py: Typo.
	* src/EditPerson.py (on_add_addr_clicked): Typos.
	* src/EditSource.py (display_references): Add lots of missed
	source references.
	* src/ImageSelect.py: Use PluginsMgr instead of Plugins.

2005-03-07  Don Allingham  <don@gramps-project.org>
	* src/RelLib.py: more documentation

2005-03-07 Alex Roitman  <shura@alex.neuro.umn.edu>
	* src/gramps_main.py (post_load): Upgrade even if no callback.

2005-03-06  Don Allingham  <don@gramps-project.org>
	* src/GrampsBSDDB.py: display upgrade messages to stdout

2005-03-06  Don Allingham  <dallingham@users.sourceforge.net>
	* src/GrampsBSDDB.py: add upgrade to version 3 for new Name type
	* src/NameEdit.py: add date editor field