@@ -22,6 +22,13 @@
 
 #-------------------------------------------------------------------------
 #
+# Python modules
+#
+#-------------------------------------------------------------------------
+from gettext import gettext as _
+
+#-------------------------------------------------------------------------
+#
 # GTK/Gnome modules
 #
 #-------------------------------------------------------------------------
@@ -40,10 +47,15 @@ except:
 #
 #-------------------------------------------------------------------------
 import GrampsCfg
-from gettext import gettext as _
 import Relationship
 import NameDisplay
+import RelLib
 
+#-------------------------------------------------------------------------
+#
+# Constants
+#
+#-------------------------------------------------------------------------
 _PAD       = 3
 _CANVASPAD = 3
 _PERSON    = "p"
