@@ -1,3 +1,7 @@
+2005-03-09 Alex Roitman  <shura@alex.neuro.umn.edu>
+	* src/PedView.py: Import RelLib for accessing relationship constants.
+	* src/NameEdit.py: Use empty Date for newly created name.
+
 2005-03-08  Don Allingham  <don@gramps-project.org>
 	* src/ChooseParents.py: change _nsort to _model
 	* src/GrampsBSDDB.py: fix event secondary index function to that
